# perch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  demo.tape  screenshots.tape
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: config.rs  db.rs  demo.rs  lib.rs  main.rs  paths.rs  schedule.rs  theme.rs  update.rs
src/api/: bluesky.rs  mastodon.rs  mod.rs
src/app/: async_ops.rs  events.rs  mod.rs  state.rs  ui.rs
src/auth/: mod.rs
src/images/: cache.rs  loader.rs  mod.rs
src/models/: account.rs  mod.rs  network.rs  post.rs  scheduled_post.rs
src/sync/: mod.rs
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  llms.txt  robots.txt  sitemap.xml
website/public/.well-known/: llms.txt
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro  themes.astro
